# c2pa-conformance-tool-cli

./: .gitignore  .gitmodules  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  FutureFeatures.md  ProductDescription.md  README.md  TESTING.md
.cursor/rules/: rust-cli-expert.mdc
crates/c2pa-validate/: Cargo.toml
crates/c2pa-validate/src/: cli.rs  lib.rs  main.rs  profiles.rs  report.rs  validator.rs
crates/c2pa-validate/tests/: asset_validation.rs  crjson_validation.rs  negative_tests.rs  output_formats.rs  profile_outputs.rs  schema_validation.rs
crates/c2pa-validate/tests/common/: mod.rs
output/: ChatGPT_Image.json  PXL_20260208_202351558.json
testfiles/crjson/: invalid_missing_schema.json  invalid_no_results_array.json  invalid_schema_version_missing.json  valid_minimal.json
