[workspace]
resolver = "2"
members = ["crates/c2pa-validate"]
exclude = ["vendor/c2pa-rs"]

[workspace.package]
edition = "2021"
license = "Apache-2.0"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive", "env"] }
glob = "0.3.3"
reqwest = { version = "0.12.23", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1.0.225", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["preserve_order"] }
thiserror = "2.0.17"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
jsonschema = { version = "0.24", features = ["draft202012"] }
