[package]
name = "c2pa-validate"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI for C2PA conformance validation with structured crJSON reporting"
default-run = "c2pa-validate"

[lib]
name = "c2pa_validate"
path = "src/lib.rs"

[[bin]]
name = "c2pa-validate"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
chrono = "0.4"
clap.workspace = true
glob.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
c2pa = { path = "../../vendor/c2pa-rs/sdk", features = ["file_io", "pdf", "fetch_remote_manifests"] }
profile_evaluator_rs = { path = "../../vendor/profile-evaluator-rs" }

[dev-dependencies]
jsonschema = { workspace = true }
